<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.intro.LoginOptionsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_login_options"
        android:scaleType="fitXY"
        app:tint="@color/red"
        android:layout_alignParentBottom="true"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_18sdp"
        app:cardBackgroundColor="#EDFFFFFF"
        app:cardElevation="0dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_border"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_your_perfect_npup_match_today"
                android:gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:fontFamily="@font/mont_semibold"
                android:textColor="#544864"
                />
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:text="LOGIN"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/bg_login_btn"
                android:backgroundTint="@color/red"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/llGoogleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/bg_google_login"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:foregroundGravity="center"
                android:visibility="gone">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/google_logo"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/login_with_google"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:foregroundGravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/don_t_have_an_account"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/dark_grey1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>



</RelativeLayout>