<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.intro.LoginActivity"
    android:background="@color/white">



    <ImageView
        android:id="@+id/ivBackReg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/baseline_arrow_back_24"
        android:elevation="@dimen/_10sdp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="@dimen/_5sdp"
        />

    <ImageView
        android:id="@+id/ivTopReg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/img_login_top"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:lottie_rawRes="@raw/anim_login"
        app:lottie_autoPlay="true"
        android:layout_below="@id/cvReg"
        app:lottie_loop="true" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvReg"
        android:layout_below="@id/ivTopReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="#EDFFFFFF"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_border"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_user"
                android:gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:fontFamily="@font/mont_semibold"
                android:textColor="@color/black"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:text="CREATE USER"
                android:foreground="?attr/selectableItemBackground"
                android:backgroundTint="@color/red"
                android:background="@drawable/bg_login_btn"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/llSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:foregroundGravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/don_t_have_an_account"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/dark_grey1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="SIGN IN"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/primary_color"
        android:visibility="gone"/>

</RelativeLayout>